--- a/Halloapp/cs.lproj/Localizable.strings
+++ b/Halloapp/cs.lproj/Localizable.strings
@@ -544,6 +544,9 @@
 /* Title for alert box when the user can't join the group via group link */
 "group.preview.join.error.title" = "Nelze se přidat do skupiny";
 
+/* Label for joining group action */
+"group.preview.join.group" = "PŘIDAT SE KE";
+
 /* Label for the number of members in the group */
 "group.preview.members" = "Členové";
 
