--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -631,6 +631,9 @@
 /* Title for alert box when the user can't join the group via group link */
 "group.preview.join.error.title" = "خطا در پیوستن به گروه";
 
+/* Label for joining group action */
+"group.preview.join.group" = "پیوستن به گروه";
+
 /* Label for the number of members in the group */
 "group.preview.members" = "اعضا";
 
