--- a/Halloapp/pt-br.lproj/Localizable.strings
+++ b/Halloapp/pt-br.lproj/Localizable.strings
@@ -8,7 +8,7 @@
 "• %@" = "• %@";
 
 /* About screen: body text. */
-"about.body.1" = "O HalloApp chegou! E estamos melhorando-o para você e seus entes queridos.\nTrouxemos os aplicativos sociais de volta ao básico, enquanto adicionamos uma camada de segurança e privacidade à qual achamos que todas as pessoas no mundo deveriam ter acesso.\nO HalloApp jamais usará suas informações pessoais ou lhe mostrará anúncios.\nEm vez disso, planejamos eventualmente oferecer recursos adicionais por um pequeno custo.";
+"about.body.1" = "O HalloApp chegou! E estamos desenvolvendo-o para você e seus entes queridos. Trouxemos os aplicativos sociais de volta ao básico, enquanto adicionamos uma camada de segurança e privacidade que achamos que todas as pessoas no mundo deveriam ter acesso. O HalloApp nunca usará suas informações pessoais ou exibirá anúncios. Em vez disso, planejamos eventualmente oferecer recursos adicionais a um pequeno custo.";
 
 /* About screen: body text. */
 "about.body.2" = "Obrigado por usar e compartilhar o HalloApp com seus amigos e familiares. Estamos melhorando-o a cada semana.";
@@ -37,6 +37,9 @@
 /* Message shown when a user first joins */
 "activity.center.welcome.item" = "Bem-vindo ao HalloApp!";
 
+/* Text label for action button to add the contact to the address book */
+"add.to.contact.book" = "Adicionar à Agenda de Contatos";
+
 /* Title for alert shown when there's no internet connectivity */
 "alert.no.internet.title" = "Sem conexão com a internet";
 
@@ -49,11 +52,29 @@
 /* Translation of iPhone settings app. */
 "app.ios.settings" = "Configurações";
 
+/* Company name */
+"app.name.halloapp" = "HalloApp";
+
+/* Placeholder text for when the archive is empty */
+"archive.empty.placeholder" = "Suas publicações serão arquivadas aqui após 30 dias";
+
+/* Archive navigation label */
+"archive.title.label" = "Arquivo";
+
+/* Label shown on the cancel action */
+"audio.control.cancel" = "deslize para cancelar";
+
 /* Text to show on banner when no connection is available */
-"banner.no.connection" = "Sem conexão de internet";
+"banner.no.connection" = "Sem conexão";
+
+/* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
+"button.add" = "Adicionar";
 
 /* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Cancelar";
+
+/* Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+"button.cancel.capitalized" = "CANCELAR";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
 "button.continue" = "Continuar";
@@ -72,6 +93,9 @@
 
 /* Title for Install button, takes the user to the HalloApp app store view where they can download the app. */
 "button.install" = "Instalar";
+
+/* Title for generic Invite button. */
+"button.invite" = "Convidar";
 
 /* Title for generic Learn More button. Used to provide user with additional context to actions requested. */
 "button.learn.more" = "Saiba mais";
@@ -136,6 +160,9 @@
 /* Text shown at the top of the chat screen for contacts not in the user's address book that say the contact can be added to the address book */
 "chat.add.to.contacts.book.label" = "Para ver as publicações de %@ adicione o número dele(a) à sua lista de contatos. Toque para adicionar";
 
+/* Text shown at the top of the chat screen informing the user that the contact is blocked */
+"chat.blocked.contact.label" = "O contato está bloqueado. Toque para desbloquear";
+
 /* Label for creating a new group */
 "chat.create.new.group" = "Criar novo grupo";
 
@@ -194,7 +221,7 @@
 "chat.group.leave.group.confirmation" = "Sair do “%@”?";
 
 /* Label shown above group name input box */
-"chat.group.name.label" = "NOME DO GRUPO";
+"chat.group.name.label" = "Nome do grupo";
 
 /* Title for group photo actions */
 "chat.group.photo.label" = "Foto do grupo";
@@ -204,6 +231,9 @@
 
 /* Label for inviting friends */
 "chat.invite.friends" = "Convide amigos";
+
+/* Message text shown in a message that have audio media but no text */
+"chat.message.audio" = "Nota de voz";
 
 /* Message text shown for the message that was deleted */
 "chat.message.deleted" = "Esta mensagem foi excluída.";
@@ -222,6 +252,15 @@
 
 /* Text shown in place of a received message we are not able to decrypt yet. */
 "chat.message.waiting" = "Aguardando esta mensagem. Isso pode demorar um pouco.";
+
+/* Alert message when missing microphone access */
+"chat.mic.access.denied.message" = "Para ativar a gravação de áudio, por favor, toque em \"Configurações\" e ligue o Microfone";
+
+/* Alert title when missing microphone access */
+"chat.mic.access.denied.title" = "Não é possível acessar o microfone";
+
+/* Text below the contact's name when the contact is online in the Chat Screen */
+"chat.online.label" = "on-line";
 
 /* Label shown when user is typing */
 "chat.typing.capitalized" = "digitando...";
@@ -243,6 +282,12 @@
 
 /* Text displayed in place of a comment that is currently being deleted. */
 "comment.deleting" = "Excluindo comentário";
+
+/* Alert message when missing microphone access */
+"comment.mic.access.denied.message" = "Para ativar a gravação de áudio, por favor, toque em \"Configurações\" e ligue o Microfone";
+
+/* Alert title when missing microphone access */
+"comment.mic.access.denied.title" = "Não é possível acessar o microfone";
 
 /* Text displayed in place of comment timestamp while comment is being posted. */
 "comment.posting" = "Postando...";
@@ -319,11 +364,29 @@
 /* Message requesting the user enable contacts permission */
 "contacts.permission.explanation" = "Para ajudá-lo a se conectar com amigos e familiares, permita que o HalloApp acesse seus contatos.";
 
+/* Title for modal view when showing how to change contact permissions. */
+"contacts.permission.explanation.title" = "Contatos";
+
 /* Title for tutorial explaining how user can enable contacts permission */
-"contacts.permission.tutorial.title" = "Contatos";
+"contacts.permission.tutorial.title" = "Como ativar “Contatos”";
+
+/* The default name given to new groups when the user is in Zero Zone (no contacts) */
+"create.group.default.name.my.new.group" = "Meu novo grupo";
+
+/* Text label for group description text box */
+"create.group.description.label" = "Descrição";
+
+/* Placeholder text shown inside the group description input box when it's empty */
+"create.group.description.placeholder" = "Adicione uma descrição (opcional)";
 
 /* Alert message telling the user to try creating the group again after an error */
 "create.group.error" = "Ocorreu um erro ao criar o grupo. Por favor, tente novamente";
+
+/* Placeholder text shown inside the group name input box when it's empty */
+"create.group.name.placeholder" = "Dê um nome ao seu grupo";
+
+/* Title of group creation screen */
+"create.group.title" = "Informações do grupo";
 
 /* Title for generic delete button. */
 "Delete" = "Excluir";
@@ -385,6 +448,9 @@
 /* Text for feed notification displayed in Activity Center. */
 "feed.notification.replied.w.text" = "<$author$> respondeu: <$text$>";
 
+/* Archived date timestamp */
+"feed.post.archived.timestamp" = "Arquivado em %@";
+
 /* Shown when post fails or is canceled. */
 "feed.post.failed" = "Falha ao postar.";
 
@@ -427,17 +493,32 @@
 /* Possible Feed Privacy setting value. Keep short. */
 "feed.privacy.value.n.selected" = "feed.privacidade.valor.n.selecionados";
 
+/* Body text of welcome post shown to users who have no contacts and no content (zero zone) in their feed */
+"feed.welcome.post.body" = "Use seu número de telefone para se conectar com amigos e familiares em um espaço sem anúncios, sem marcas, sem curtidas e sem influenciadores.\n\nO HalloApp é para você e para aqueles mais próximos de você, no privado. Convide seus amigos de verdade para começar!";
+
+/* Title of welcome post shown to users who have no contacts and no content (zero zone) in their feed */
+"feed.welcome.post.title" = "Bem-vindo ao HalloApp, um espaço para relacionamentos reais ✨";
+
 /* Button under someone's post. Verb. */
 "feedpost.button.comment" = "Comentar";
 
 /* Button under someoneelse's post. Verb. */
-"feedpost.button.reply" = "Responder";
+"feedpost.button.reply" = "Responder no privado";
+
+/* Placeholder text shown in group description input box when there's no description */
+"group.add.description" = "Adicionar descrição do grupo";
+
+/* Label shown above background selection row */
+"group.background.label" = "Fundo";
 
 /* Label for choosing a color at the group background preview screen */
 "group.bg.pick.a.color.label" = "ESCOLHA UMA COR";
 
 /* Title of group background screen */
 "group.bg.title" = "Plano de fundo";
+
+/* Label shown above group description input box */
+"group.description.label" = "Descrição do grupo";
 
 /* Message text shown with the user who added a group member */
 "group.event.added.member" = "%1$@ adicionou %2$@";
@@ -456,6 +537,12 @@
 
 /* Message text shown when you change the background */
 "group.event.changed.background.you" = "Você alterou a cor de fundo";
+
+/* Message text shown with the user who changed the group description */
+"group.event.changed.description" = "%1@ alterou a descrição do grupo";
+
+/* Message text shown when you change the group description */
+"group.event.changed.description.you" = "Você alterou a descrição do grupo";
 
 /* Message text shown with the user who changed the group name */
 "group.event.changed.name" = "%1$@ mudou o nome do grupo para \"%2$@\"";
@@ -486,6 +573,12 @@
 
 /* Message text shown when you remove a group member */
 "group.event.removed.member.you" = "Você removeu %1@";
+
+/* Body text of welcome post shown to users who have no contacts and no content (zero zone) in their group feed, in their newly created group */
+"group.feed.welcome.post.body" = "Compartilhe este link com amigos, e eles se juntarão automaticamente ao seu grupo.";
+
+/* Title of welcome post shown to users who have no contacts and no content (zero zone) in their group feed, in their newly created group */
+"group.feed.welcome.post.title" = "Convide um amigo para o seu grupo";
 
 /* Action label for inviting others to join the group via link */
 "group.info.invite.to.group.via.link" = "Convidar para o grupo via link";
@@ -523,6 +616,9 @@
 /* Title of group invite screen */
 "group.invite.title" = "Convite de grupo";
 
+/* Label shown above group members list */
+"group.members.label" = "Membros";
+
 /* Text for alert box when the user clicks on an invalid group invite link */
 "group.preview.get.info.error.invalid.link" = "O link de convite do grupo é inválido";
 
@@ -534,6 +630,9 @@
 
 /* Title for alert box when the user can't join the group via group link */
 "group.preview.join.error.title" = "Não é possível entrar no grupo";
+
+/* Label for joining group action */
+"group.preview.join.group" = "Juntar-se ao grupo";
 
 /* Label for the number of members in the group */
 "group.preview.members" = "Membros";
@@ -550,6 +649,9 @@
 /* Text shown when user is about to remove the group */
 "groups.list.remove.message" = "Tem certeza de que deseja remover este grupo e seu conteúdo de seu dispositivo?";
 
+/* The name of the group that is created for the user when they are new and in the zero zone (no contacts and no content) */
+"groups.NUX.user.group.name" = "Grupo de %@";
+
 /* A label on the header to indicate which person I have groups in common with */
 "groups.title" = "Com %@";
 
@@ -564,6 +666,9 @@
 
 /* Title of update notice shown to users who have old versions of the app */
 "home.update.notice.title" = "Esta versão está desatualizada";
+
+/* Title of action sheet that allows the user to choose between sms and whatsapp to invite contact */
+"invite.action.sheet.title" = "Convidar %@ via...";
 
 /* Displayed below contact name in contact list that is displayed when inviting someone to HalloApp. */
 "invite.already.halloapp.user" = "Já é um usuário do HalloApp";
@@ -596,7 +701,13 @@
 "invite.text.specific" = "Ei, %1$@, tenho um convite para você se juntar a mim no HalloApp — uma rede de relacionamento real para aqueles mais próximos a mim. Use %2$@ para se registrar. Obtenha-o em https://halloapp.com/dl";
 
 /* Title for the screen that allows to select contact to invite. */
-"invite.title" = "Convidar";
+"invite.title" = "Convidar amigos";
+
+/* Title of cell at the top of the invite screen */
+"invite.via.link" = "Convidar via link";
+
+/* Generic label for search, mostly used as placeholder text for searchbar */
+"label.search" = "Pesquisar";
 
 /* Link text to open invite flow */
 "link.invite.friend" = "Convidar um amigo";
@@ -606,6 +717,9 @@
 
 /* Link that when tapped will open App Store so user can update to the latest version of the app. */
 "link.update.your.app" = "Atualize seu aplicativo.";
+
+/* Displayed while waiting for link preview to load */
+"loading.preview" = "Carregando visualização...";
 
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Eu";
@@ -653,13 +767,16 @@
 "media.save.not.saved" = "A foto não pôde ser salva";
 
 /* Label indicating that media was successfully saved to the camera roll */
-"media.save.saved" = "Salvo";
+"media.save.saved" = "Salvo no Rolo da Câmera";
 
 /* Accessibility label for X (Close) button in media editor. */
 "media.voiceover.button.close" = "Fechar";
 
 /* Accessibility label for a button in media editor. Refers to media editing action. */
 "media.voiceover.button.flip" = "Virar";
+
+/* Accessibility label for a button in media editor. Refers to media editing action. */
+"media.voiceover.button.mute" = "Mudo";
 
 /* Accessibility label for a button in media editor. Refers to media editing action. */
 "media.voiceover.button.rotate" = "Girar";
@@ -706,6 +823,12 @@
 /* Indicates how many invites are remaining */
 "n.invites.remaining" = "n.invites.remaining";
 
+/* Displayed in place of deleted feed posts. */
+"n.posts.deleted" = "%@ publicações excluídas";
+
+/* Alert text shown when max group size is reached when selecting/adding group members */
+"new.group.members.max.size.alert" = "O tamanho máximo do grupo é %d";
+
 /* Text shown to indicate user is not in the group anymore */
 "not.in.group.banner.text" = "Você não está mais neste grupo";
 
@@ -724,6 +847,12 @@
 /* New post notification text when post is multiple videos without caption. */
 "notification.n.videos" = "notificação.n.vídeos";
 
+/* Title for the new comment notification. */
+"notification.new.comment" = "Novo comentário";
+
+/* Content for contact notification. */
+"notification.new.contact.content" = "%@ está agora no HalloApp";
+
 /* Content for friend notification. */
 "notification.new.friend.content" = "%@ está agora no HalloApp";
 
@@ -738,6 +867,9 @@
 
 /* New post notification text when post is one video without caption. */
 "notification.one.video" = "📹 vídeo";
+
+/* New post notification text when post is a voice note. */
+"notification.voicenote" = "🎤 Nota de voz";
 
 /* Text for new user popup pointing at activity center icon */
 "nux.activity.center.icon" = "Hallo!";
@@ -797,7 +929,7 @@
 "picker.media.n.limit" = "seletor.mídia.n.limite";
 
 /* Displayed in place of a deleted feed post. */
-"post.has.been.deleted" = "Esta postagem foi excluída";
+"post.has.been.deleted" = "Esta publicação foi excluída";
 
 /* Displayed in place of a deleted feed post. */
 "post.has.been.deleted.by.author" = "%@ excluiu sua postagem";
@@ -819,6 +951,9 @@
 
 /* This is a verb.  The text is clickable, under a contact name and takes the user to the chat screen with that contact. It should not be translated as a noun. */
 "profile.header.message.user" = "Mensagem";
+
+/* Text for unblocking user under profile header */
+"profile.header.unblock.user" = "Desbloquear";
 
 /* Item in Profile > Help screen. */
 "profile.help.faq" = "Perguntas frequentes";
@@ -900,6 +1035,12 @@
 
 /* When user registers for HalloApp using the AppClip via group invite link, they are prompted to install HalloApp to join the group. */
 "registration.install.app.to.join.group" = "Instalar HalloApp para abrir %@";
+
+/* Title for popup that appears when user tries to register invalid number */
+"registration.invalidphone" = "Droga!";
+
+/* Popup that appears when user tries to register invalid number */
+"registration.invalidphone.only" = "O número de telefone que você inseriu é inválido. Por favor, cheque novamente.";
 
 /* Popup that appears when user tries to register uninvited number */
 "registration.invite.only" = "Se você seguiu um link de convite de grupo para se registrar, por favor, clique no link novamente para finalizar o registro e entrar no grupo.";
@@ -1048,6 +1189,9 @@
 /* Settings > Notifications: label for the toggle that turns new comment notifications on or off. */
 "settings.notifications.comments" = "Comentários";
 
+/* Instructions for enabling notifications permissions */
+"settings.notifications.disabled.instructions" = "Por favor, ative as notificações em Configurações.";
+
 /* Settings > Notifications: label for the toggle that turns new post notifications on or off. */
 "settings.notifications.posts" = "Postagens";
 
@@ -1058,7 +1202,7 @@
 "settings.privacy.posts" = "Postagens";
 
 /* String to auto-fill if a user tried to share to a friend. */
-"settings.share.text" = "Junte-se a mim no HalloApp. Baixe gratuitamente em halloapp.com/dl";
+"settings.share.text" = "Junte-se à minha rede de relacionamentos reais no HalloApp. Baixe gratuitamente em halloapp.com/dl";
 
 /* One of the items in context menu presented upon long press on web link. */
 "textlabel.context.menu.add.reading.list" = "Adicionar à lista de leitura";
@@ -1144,6 +1288,9 @@
 /* Fourth tab in the main app interface */
 "title.settings" = "Configurações";
 
+/* Row in Settings screen */
+"title.storage" = "Armazenamento";
+
 /* Title for the screen with information about who saw your post. */
 "title.your.post" = "Visto por";
 
@@ -1167,6 +1314,9 @@
 
 /* Option when user taps more on profile page */
 "user.option.block" = "Bloquear no HalloApp";
+
+/* Option when User clicks on the phone number on profile page and this can let the user copy the phone number */
+"user.option.copy.phone.number" = "Copiar número de telefone";
 
 /* Option when user taps more on profile page */
 "user.option.unblock" = "Desbloquear no HalloApp";
