--- a/Halloapp/pt.lproj/Localizable.strings
+++ b/Halloapp/pt.lproj/Localizable.strings
@@ -535,6 +535,9 @@
 /* Title for alert box when the user can't join the group via group link */
 "group.preview.join.error.title" = "Não é possível entrar no grupo";
 
+/* Label for joining group action */
+"group.preview.join.group" = "ENTRAR NO GRUPO";
+
 /* Label for the number of members in the group */
 "group.preview.members" = "Membros";
 
