--- a/Halloapp/tr.lproj/Localizable.strings
+++ b/Halloapp/tr.lproj/Localizable.strings
@@ -607,6 +607,9 @@
 /* Title for alert box when the user can't join the group via group link */
 "group.preview.join.error.title" = "Gruba katılma başarısız";
 
+/* Label for joining group action */
+"group.preview.join.group" = "GRUBA KATIL";
+
 /* Label for the number of members in the group */
 "group.preview.members" = "Üyeler";
 
