--- a/Notification Service Extension/nl.lproj/Localizable.strings
+++ b/Notification Service Extension/nl.lproj/Localizable.strings
@@ -32,7 +32,7 @@
 "button.go.to.settings" = "Ga naar Instellingen";
 
 /* Title for generic Invite button. */
-"button.invite" = "Nodig uit";
+"button.invite" = "Uitnodigen";
 
 /* Title for generic Learn More button. Used to provide user with additional context to actions requested. */
 "button.learn.more" = "Meer Informatie";
@@ -59,7 +59,7 @@
 "button.send" = "Verzenden";
 
 /* Title for generic Share button. Mostly used to complete some modal flow. */
-"button.share" = "Deel";
+"button.share" = "Delen";
 
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Bijwerken";
