--- a/Share Extension/fr.lproj/Localizable.strings
+++ b/Share Extension/fr.lproj/Localizable.strings
@@ -4,11 +4,17 @@
 /* Message to tell the user to try again when they have internet connectivity again */
 "alert.no.internet.try.again" = "Assure-toi d'être bien connecté à Internet, puis réessaie.";
 
+/* Company name */
+"app.name.halloapp" = "HalloApp";
+
 /* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
 "button.add" = "Ajouter";
 
 /* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Annuler";
+
+/* Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+"button.cancel.capitalized" = "ANNULER";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
 "button.continue" = "Continuer";
@@ -24,6 +30,9 @@
 
 /* Title for button that will take user to iOS settings (e.g., to enable some permission we need). */
 "button.go.to.settings" = "Aller dans les paramètres";
+
+/* Title for generic Invite button. */
+"button.invite" = "Inviter";
 
 /* Title for generic Learn More button. Used to provide user with additional context to actions requested. */
 "button.learn.more" = "En savoir plus";
@@ -58,14 +67,23 @@
 /* Title for generic delete button. */
 "Delete" = "Supprimer";
 
+/* Generic label for search, mostly used as placeholder text for searchbar */
+"label.search" = "Recherche";
+
 /* Generic 'learn more' link. Mostly used to present additional information about topic. */
 "link.learnMore" = "En savoir plus";
 
 /* Link that when tapped will open App Store so user can update to the latest version of the app. */
 "link.update.your.app" = "Mettre à jour ton application.";
 
+/* Displayed while waiting for link preview to load */
+"loading.preview" = "Chargement de l'aperçu...";
+
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Moi";
+
+/* String to auto-fill if a user tried to share to a friend. */
+"settings.share.text" = "Rejoignez mon réseau de relations réelles sur HalloApp. Téléchargez-le gratuitement sur halloapp.com/dl.";
 
 /* Placeholder for media caption. */
 "share.composer.placeholder" = "Écrire une description";
@@ -84,6 +102,9 @@
 
 /* Composer title when sharing to feed */
 "share.composer.title.feed" = "Nouvelle publication";
+
+/* Alert dialog message shown when uploading fails. */
+"share.composer.uploading.fail.message" = "Veuillez réessayer plus tard.";
 
 /* Alert dialog title shown when uploading fails. */
 "share.composer.uploading.fail.title" = "Échec du téléchargement";
