--- a/Halloapp/es.lproj/Localizable.strings
+++ b/Halloapp/es.lproj/Localizable.strings
@@ -574,6 +574,9 @@
 /* Message text shown when you remove a group member */
 "group.event.removed.member.you" = "Has eliminado a %1@";
 
+/* Indicates how many members are in the group */
+"group.feed.n.members" = "group.feed.n.members";
+
 /* Body text of welcome post shown to users who have no contacts and no content (zero zone) in their group feed, in their newly created group */
 "group.feed.welcome.post.body" = "Comparte este enlace con tus amigos y ellos se unirán a tu grupo de forma automática.";
 
@@ -633,9 +636,6 @@
 
 /* Label for joining group action */
 "group.preview.join.group" = "UNIRSE AL GRUPO";
-
-/* Label for the number of members in the group */
-"group.preview.members" = "Miembros";
 
 /* Text shown to tell user the group title is tappable */
 "group.title.tap.for.info" = "Toca aquí para ver la información del grupo";
@@ -825,6 +825,9 @@
 
 /* Displayed in place of deleted feed posts. */
 "n.posts.deleted" = "%@ publicaciones borradas";
+
+/* Placeholder text shown in the middle of the Add New Group Members screen when user have no contacts (in ZeroZone) to add */
+"new.group.members.empty.placeholder" = "Tus contactos que están en HalloApp aparecerán aquí";
 
 /* Alert text shown when max group size is reached when selecting/adding group members */
 "new.group.members.max.size.alert" = "El tamaño máximo de grupo es %d";
