--- a/Halloapp/nl.lproj/Localizable.strings
+++ b/Halloapp/nl.lproj/Localizable.strings
@@ -14,7 +14,7 @@
 "about.body.2" = "Bedankt voor het gebruiken en delen van HalloApp met je vrienden en familie. We verbeteren de app iedere week!";
 
 /* About screen: footer text. Parameter is support email address. */
-"about.footer" = "Heb je vragen of wil je feedback geven? E-mail ons dan op %@";
+"about.footer" = "Heb je vragen of feedback? E-mail ons dan op %@";
 
 /* About screen: greeting. */
 "about.hallo" = "Hallo!";
@@ -574,6 +574,9 @@
 /* Message text shown when you remove a group member */
 "group.event.removed.member.you" = "Je hebt %1@ verwijderd";
 
+/* Indicates how many members are in the group */
+"group.feed.n.members" = "group.feed.n.members";
+
 /* Body text of welcome post shown to users who have no contacts and no content (zero zone) in their group feed, in their newly created group */
 "group.feed.welcome.post.body" = "Deel deze link met vrienden en ze worden automatisch toegevoegd aan je groep.";
 
@@ -633,9 +636,6 @@
 
 /* Label for joining group action */
 "group.preview.join.group" = "Deelnemen";
-
-/* Label for the number of members in the group */
-"group.preview.members" = "Deelnemers";
 
 /* Text shown to tell user the group title is tappable */
 "group.title.tap.for.info" = "Tik hier voor groepsinformatie";
@@ -825,6 +825,9 @@
 
 /* Displayed in place of deleted feed posts. */
 "n.posts.deleted" = "%@ posts verwijderd";
+
+/* Placeholder text shown in the middle of the Add New Group Members screen when user have no contacts (in ZeroZone) to add */
+"new.group.members.empty.placeholder" = "Je contacten die HalloApp gebruiken verschijnen hier";
 
 /* Alert text shown when max group size is reached when selecting/adding group members */
 "new.group.members.max.size.alert" = "De maximale groepsgrootte is %d";
